parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Unused terminals:

    DO
    LCOMMENT
    SETPROP
    NEW
    WITH
    CASE
    SWITCH
    EXPO
    GETP
    COLON
    DELETE
    GETPROP
    BCOMMENT
    REGEX
    SETP
    CONDOP
    THIS

Grammar

Rule 0     S' -> start
Rule 1     start -> block
Rule 2     start -> statements
Rule 3     block -> LEFTBRACE blockmarker statements RIGHTBRACE
Rule 4     blockmarker -> <empty>
Rule 5     statements -> statement statements
Rule 6     statements -> statement
Rule 7     statement -> assignment SEMICOLON
Rule 8     statement -> declaration SEMICOLON
Rule 9     statement -> reassignment SEMICOLON
Rule 10    statement -> BREAK SEMICOLON
Rule 11    statement -> CONTINUE SEMICOLON
Rule 12    statement -> funcstmt SEMICOLON
Rule 13    statement -> if
Rule 14    statement -> ifelse
Rule 15    statement -> whileloop
Rule 16    statement -> funcdecl
Rule 17    statement -> forloop
Rule 18    statement -> reassignmentarray SEMICOLON
Rule 19    statement -> RETURN expression SEMICOLON
Rule 20    statement -> CONSOLE DOT LOG LEFTPAREN printList RIGHTPAREN SEMICOLON
Rule 21    printList -> expression COMMA printList
Rule 22    printList -> expression
Rule 23    declaration -> VAR declarationList
Rule 24    declarationList -> ID COMMA declarationList
Rule 25    declarationList -> ID
Rule 26    assignment -> VAR assignlist
Rule 27    assignlist -> ID EQ expression COMMA assignlist
Rule 28    assignlist -> ID EQ expression
Rule 29    assignlist -> ID EQ array
Rule 30    reassignment -> ID EQ expression
Rule 31    reassignment -> ID PLUSEQ expression
Rule 32    reassignment -> ID MINUSEQ expression
Rule 33    reassignment -> ID INTOEQ expression
Rule 34    reassignment -> ID DIVEQ expression
Rule 35    reassignment -> ID INCR
Rule 36    reassignment -> ID DECR
Rule 37    reassignment -> ID LSHIFTEQ expression
Rule 38    reassignment -> ID RSHIFTEQ expression
Rule 39    reassignment -> ID URSHIFTEQ expression
Rule 40    reassignment -> ID ANDEQ expression
Rule 41    reassignment -> ID OREQ expression
Rule 42    reassignment -> ID XOREQ expression
Rule 43    reassignment -> ID MODEQ expression
Rule 44    reassignment -> LEFTPAREN reassignment RIGHTPAREN
Rule 45    casemarker -> <empty>
Rule 46    endcasemarker -> <empty>
Rule 47    array -> LEFTBRACKET arrayList RIGHTBRACKET
Rule 48    arrayList -> array COMMA arrayList
Rule 49    arrayList -> array
Rule 50    arrayList -> expression COMMA arrayList
Rule 51    arrayList -> expression
Rule 52    expression -> expression PLUS expression
Rule 53    expression -> expression MINUS expression
Rule 54    expression -> expression INTO expression
Rule 55    expression -> expression DIVIDE expression
Rule 56    expression -> expression MOD expression
Rule 57    expression -> LEFTPAREN expression RIGHTPAREN
Rule 58    expression -> NOT expression
Rule 59    expression -> expression BINAND expression
Rule 60    expression -> expression BINOR expression
Rule 61    expression -> expression BINXOR expression
Rule 62    expression -> BINNOT expression
Rule 63    expression -> expression LT expression
Rule 64    expression -> expression GT expression
Rule 65    expression -> expression DOUBLEEQ expression
Rule 66    expression -> expression NOTEQUAL expression
Rule 67    expression -> expression LTE expression
Rule 68    expression -> expression GTE expression
Rule 69    expression -> expression STREQUAL expression
Rule 70    expression -> expression STRNEQUAL expression
Rule 71    expression -> expression AND expression
Rule 72    expression -> expression OR expression
Rule 73    expression -> expression LSHIFT expression
Rule 74    expression -> expression RSHIFT expression
Rule 75    expression -> expression URSHIFT expression
Rule 76    expression -> EVAL LEFTPAREN evalmarker statements evalendmarker RIGHTPAREN
Rule 77    expression -> EVAL LEFTPAREN block RIGHTPAREN
Rule 78    expression -> EVAL LEFTPAREN expression RIGHTPAREN
Rule 79    evalmarker -> <empty>
Rule 80    evalendmarker -> <empty>
Rule 81    expression -> basicTypes
Rule 82    expression -> ID
Rule 83    expression -> TYPEOF expression
Rule 84    funcstmt -> ID EQ functioncall
Rule 85    funcstmt -> functioncall
Rule 86    funcstmt -> VAR ID EQ functioncall
Rule 87    expression -> arrayCall
Rule 88    reassignmentarray -> arrayCall EQ expression
Rule 89    arrayCall -> ID reference
Rule 90    reference -> LEFTBRACKET expression RIGHTBRACKET reference
Rule 91    reference -> LEFTBRACKET expression RIGHTBRACKET
Rule 92    basicTypes -> NUMBER
Rule 93    basicTypes -> BOOLEAN
Rule 94    basicTypes -> STRING
Rule 95    basicTypes -> UNDEFINED
Rule 96    functioncall -> ID LEFTPAREN argList RIGHTPAREN
Rule 97    argList -> expression
Rule 98    argList -> expression COMMA argList
Rule 99    argList -> <empty>
Rule 100   if -> IF expression ifelseblock block ifblockend
Rule 101   ifblockend -> <empty>
Rule 102   ifelse -> IF expression ifelseblock block ELSE elseblock block elseblockend
Rule 103   ifelseblock -> <empty>
Rule 104   elseblock -> empty
Rule 105   elseblockend -> empty
Rule 106   whileloop -> WHILE whileblockstart LEFTPAREN expression RIGHTPAREN exprcheck block whileblockend
Rule 107   whileblockstart -> empty
Rule 108   exprcheck -> empty
Rule 109   whileblockend -> empty
Rule 110   forloop -> FOR scope_marker LEFTPAREN initialization SEMICOLON forexpr_marker for_expr forcheck_marker SEMICOLON increment increment_marker RIGHTPAREN forblock endblock_marker
Rule 111   scope_marker -> <empty>
Rule 112   forexpr_marker -> <empty>
Rule 113   forcheck_marker -> <empty>
Rule 114   increment_marker -> <empty>
Rule 115   endblock_marker -> <empty>
Rule 116   forblock -> LEFTBRACE statements RIGHTBRACE
Rule 117   initialization -> assignment
Rule 118   initialization -> reinitialization
Rule 119   reinitialization -> reassignment COMMA reinitialization
Rule 120   reinitialization -> reassignment
Rule 121   for_expr -> expression
Rule 122   increment -> reassignment SEMICOLON increment
Rule 123   increment -> reassignment
Rule 124   funcarghead -> funcargList
Rule 125   funcargList -> ID COMMA funcargList
Rule 126   funcargList -> ID
Rule 127   funcargList -> <empty>
Rule 128   funcdecl -> FUNCTION ID funcscopedefnormal LEFTPAREN funcarghead RIGHTPAREN funblock endfunc
Rule 129   funcscopedefnormal -> <empty>
Rule 130   endfunc -> empty
Rule 131   funcdecl -> VAR ID EQ FUNCTION funcscopedef LEFTPAREN funcarghead RIGHTPAREN funblock SEMICOLON endfuncdecl
Rule 132   funblock -> LEFTBRACE statements RIGHTBRACE
Rule 133   funcscopedef -> <empty>
Rule 134   endfuncdecl -> <empty>
Rule 135   empty -> <empty>

Terminals, with rules where they appear

AND                  : 71
ANDEQ                : 40
BCOMMENT             : 
BINAND               : 59
BINNOT               : 62
BINOR                : 60
BINXOR               : 61
BOOLEAN              : 93
BREAK                : 10
CASE                 : 
COLON                : 
COMMA                : 21 24 27 48 50 98 119 125
CONDOP               : 
CONSOLE              : 20
CONTINUE             : 11
DECR                 : 36
DELETE               : 
DIVEQ                : 34
DIVIDE               : 55
DO                   : 
DOT                  : 20
DOUBLEEQ             : 65
ELSE                 : 102
EQ                   : 27 28 29 30 84 86 88 131
EVAL                 : 76 77 78
EXPO                 : 
FOR                  : 110
FUNCTION             : 128 131
GETP                 : 
GETPROP              : 
GT                   : 64
GTE                  : 68
ID                   : 24 25 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 82 84 86 89 96 125 126 128 131
IF                   : 100 102
INCR                 : 35
INTO                 : 54
INTOEQ               : 33
LCOMMENT             : 
LEFTBRACE            : 3 116 132
LEFTBRACKET          : 47 90 91
LEFTPAREN            : 20 44 57 76 77 78 96 106 110 128 131
LOG                  : 20
LSHIFT               : 73
LSHIFTEQ             : 37
LT                   : 63
LTE                  : 67
MINUS                : 53
MINUSEQ              : 32
MOD                  : 56
MODEQ                : 43
NEW                  : 
NOT                  : 58
NOTEQUAL             : 66
NUMBER               : 92
OR                   : 72
OREQ                 : 41
PLUS                 : 52
PLUSEQ               : 31
REGEX                : 
RETURN               : 19
RIGHTBRACE           : 3 116 132
RIGHTBRACKET         : 47 90 91
RIGHTPAREN           : 20 44 57 76 77 78 96 106 110 128 131
RSHIFT               : 74
RSHIFTEQ             : 38
SEMICOLON            : 7 8 9 10 11 12 18 19 20 110 110 122 131
SETP                 : 
SETPROP              : 
STREQUAL             : 69
STRING               : 94
STRNEQUAL            : 70
SWITCH               : 
THIS                 : 
TYPEOF               : 83
UNDEFINED            : 95
URSHIFT              : 75
URSHIFTEQ            : 39
VAR                  : 23 26 86 131
WHILE                : 106
WITH                 : 
XOREQ                : 42
error                : 

Nonterminals, with rules where they appear

argList              : 96 98
array                : 29 48 49
arrayCall            : 87 88
arrayList            : 47 48 50
assignlist           : 26 27
assignment           : 7 117
basicTypes           : 81
block                : 1 77 100 102 102 106
blockmarker          : 3
casemarker           : 
declaration          : 8
declarationList      : 23 24
elseblock            : 102
elseblockend         : 102
empty                : 104 105 107 108 109 130
endblock_marker      : 110
endcasemarker        : 
endfunc              : 128
endfuncdecl          : 131
evalendmarker        : 76
evalmarker           : 76
exprcheck            : 106
expression           : 19 21 22 27 28 30 31 32 33 34 37 38 39 40 41 42 43 50 51 52 52 53 53 54 54 55 55 56 56 57 58 59 59 60 60 61 61 62 63 63 64 64 65 65 66 66 67 67 68 68 69 69 70 70 71 71 72 72 73 73 74 74 75 75 78 83 88 90 91 97 98 100 102 106 121
for_expr             : 110
forblock             : 110
forcheck_marker      : 110
forexpr_marker       : 110
forloop              : 17
funblock             : 128 131
funcargList          : 124 125
funcarghead          : 128 131
funcdecl             : 16
funcscopedef         : 131
funcscopedefnormal   : 128
funcstmt             : 12
functioncall         : 84 85 86
if                   : 13
ifblockend           : 100
ifelse               : 14
ifelseblock          : 100 102
increment            : 110 122
increment_marker     : 110
initialization       : 110
printList            : 20 21
reassignment         : 9 44 119 120 122 123
reassignmentarray    : 18
reference            : 89 90
reinitialization     : 118 119
scope_marker         : 110
start                : 0
statement            : 5 6
statements           : 2 3 5 76 116 132
whileblockend        : 106
whileblockstart      : 106
whileloop            : 15

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . block
    (2) start -> . statements
    (3) block -> . LEFTBRACE blockmarker statements RIGHTBRACE
    (5) statements -> . statement statements
    (6) statements -> . statement
    (7) statement -> . assignment SEMICOLON
    (8) statement -> . declaration SEMICOLON
    (9) statement -> . reassignment SEMICOLON
    (10) statement -> . BREAK SEMICOLON
    (11) statement -> . CONTINUE SEMICOLON
    (12) statement -> . funcstmt SEMICOLON
    (13) statement -> . if
    (14) statement -> . ifelse
    (15) statement -> . whileloop
    (16) statement -> . funcdecl
    (17) statement -> . forloop
    (18) statement -> . reassignmentarray SEMICOLON
    (19) statement -> . RETURN expression SEMICOLON
    (20) statement -> . CONSOLE DOT LOG LEFTPAREN printList RIGHTPAREN SEMICOLON
    (26) assignment -> . VAR assignlist
    (23) declaration -> . VAR declarationList
    (30) reassignment -> . ID EQ expression
    (31) reassignment -> . ID PLUSEQ expression
    (32) reassignment -> . ID MINUSEQ expression
    (33) reassignment -> . ID INTOEQ expression
    (34) reassignment -> . ID DIVEQ expression
    (35) reassignment -> . ID INCR
    (36) reassignment -> . ID DECR
    (37) reassignment -> . ID LSHIFTEQ expression
    (38) reassignment -> . ID RSHIFTEQ expression
    (39) reassignment -> . ID URSHIFTEQ expression
    (40) reassignment -> . ID ANDEQ expression
    (41) reassignment -> . ID OREQ expression
    (42) reassignment -> . ID XOREQ expression
    (43) reassignment -> . ID MODEQ expression
    (44) reassignment -> . LEFTPAREN reassignment RIGHTPAREN
    (84) funcstmt -> . ID EQ functioncall
    (85) funcstmt -> . functioncall
    (86) funcstmt -> . VAR ID EQ functioncall
    (100) if -> . IF expression ifelseblock block ifblockend
    (102) ifelse -> . IF expression ifelseblock block ELSE elseblock block elseblockend
    (106) whileloop -> . WHILE whileblockstart LEFTPAREN expression RIGHTPAREN exprcheck block whileblockend
    (128) funcdecl -> . FUNCTION ID funcscopedefnormal LEFTPAREN funcarghead RIGHTPAREN funblock endfunc
    (131) funcdecl -> . VAR ID EQ FUNCTION funcscopedef LEFTPAREN funcarghead RIGHTPAREN funblock SEMICOLON endfuncdecl
    (110) forloop -> . FOR scope_marker LEFTPAREN initialization SEMICOLON forexpr_marker for_expr forcheck_marker SEMICOLON increment increment_marker RIGHTPAREN forblock endblock_marker
    (88) reassignmentarray -> . arrayCall EQ expression
    (96) functioncall -> . ID LEFTPAREN argList RIGHTPAREN
    (89) arrayCall -> . ID reference

    LEFTBRACE       shift and go to state 23
    BREAK           shift and go to state 25
    CONTINUE        shift and go to state 26
    RETURN          shift and go to state 3
    CONSOLE         shift and go to state 17
    VAR             shift and go to state 21
    ID              shift and go to state 22
    LEFTPAREN       shift and go to state 19
    IF              shift and go to state 14
    WHILE           shift and go to state 2
    FUNCTION        shift and go to state 15
    FOR             shift and go to state 7

    statements                     shift and go to state 1
    if                             shift and go to state 4
    whileloop                      shift and go to state 5
    funcstmt                       shift and go to state 8
    arrayCall                      shift and go to state 9
    start                          shift and go to state 10
    reassignmentarray              shift and go to state 11
    ifelse                         shift and go to state 12
    statement                      shift and go to state 13
    forloop                        shift and go to state 16
    assignment                     shift and go to state 18
    declaration                    shift and go to state 20
    funcdecl                       shift and go to state 24
    reassignment                   shift and go to state 6
    functioncall                   shift and go to state 27
    block                          shift and go to state 28

state 1

    (2) start -> statements .

    $end            reduce using rule 2 (start -> statements .)


state 2

    (106) whileloop -> WHILE . whileblockstart LEFTPAREN expression RIGHTPAREN exprcheck block whileblockend
    (107) whileblockstart -> . empty
    (135) empty -> .

    LEFTPAREN       reduce using rule 135 (empty -> .)

    whileblockstart                shift and go to state 29
    empty                          shift and go to state 30

state 3

    (19) statement -> RETURN . expression SEMICOLON
    (52) expression -> . expression PLUS expression
    (53) expression -> . expression MINUS expression
    (54) expression -> . expression INTO expression
    (55) expression -> . expression DIVIDE expression
    (56) expression -> . expression MOD expression
    (57) expression -> . LEFTPAREN expression RIGHTPAREN
    (58) expression -> . NOT expression
    (59) expression -> . expression BINAND expression
    (60) expression -> . expression BINOR expression
    (61) expression -> . expression BINXOR expression
    (62) expression -> . BINNOT expression
    (63) expression -> . expression LT expression
    (64) expression -> . expression GT expression
    (65) expression -> . expression DOUBLEEQ expression
    (66) expression -> . expression NOTEQUAL expression
    (67) expression -> . expression LTE expression
    (68) expression -> . expression GTE expression
    (69) expression -> . expression STREQUAL expression
    (70) expression -> . expression STRNEQUAL expression
    (71) expression -> . expression AND expression
    (72) expression -> . expression OR expression
    (73) expression -> . expression LSHIFT expression
    (74) expression -> . expression RSHIFT expression
    (75) expression -> . expression URSHIFT expression
    (76) expression -> . EVAL LEFTPAREN evalmarker statements evalendmarker RIGHTPAREN
    (77) expression -> . EVAL LEFTPAREN block RIGHTPAREN
    (78) expression -> . EVAL LEFTPAREN expression RIGHTPAREN
    (81) expression -> . basicTypes
    (82) expression -> . ID
    (83) expression -> . TYPEOF expression
    (87) expression -> . arrayCall
    (92) basicTypes -> . NUMBER
    (93) basicTypes -> . BOOLEAN
    (94) basicTypes -> . STRING
    (95) basicTypes -> . UNDEFINED
    (89) arrayCall -> . ID reference

    LEFTPAREN       shift and go to state 37
    NOT             shift and go to state 41
    BINNOT          shift and go to state 43
    EVAL            shift and go to state 31
    ID              shift and go to state 38
    TYPEOF          shift and go to state 36
    NUMBER          shift and go to state 32
    BOOLEAN         shift and go to state 40
    STRING          shift and go to state 35
    UNDEFINED       shift and go to state 33

    arrayCall                      shift and go to state 34
    expression                     shift and go to state 39
    basicTypes                     shift and go to state 42

state 4

    (13) statement -> if .

    BREAK           reduce using rule 13 (statement -> if .)
    CONTINUE        reduce using rule 13 (statement -> if .)
    RETURN          reduce using rule 13 (statement -> if .)
    CONSOLE         reduce using rule 13 (statement -> if .)
    VAR             reduce using rule 13 (statement -> if .)
    ID              reduce using rule 13 (statement -> if .)
    LEFTPAREN       reduce using rule 13 (statement -> if .)
    IF              reduce using rule 13 (statement -> if .)
    WHILE           reduce using rule 13 (statement -> if .)
    FUNCTION        reduce using rule 13 (statement -> if .)
    FOR             reduce using rule 13 (statement -> if .)
    RIGHTBRACE      reduce using rule 13 (statement -> if .)
    $end            reduce using rule 13 (statement -> if .)
    RIGHTPAREN      reduce using rule 13 (statement -> if .)


state 5

    (15) statement -> whileloop .

    BREAK           reduce using rule 15 (statement -> whileloop .)
    CONTINUE        reduce using rule 15 (statement -> whileloop .)
    RETURN          reduce using rule 15 (statement -> whileloop .)
    CONSOLE         reduce using rule 15 (statement -> whileloop .)
    VAR             reduce using rule 15 (statement -> whileloop .)
    ID              reduce using rule 15 (statement -> whileloop .)
    LEFTPAREN       reduce using rule 15 (statement -> whileloop .)
    IF              reduce using rule 15 (statement -> whileloop .)
    WHILE           reduce using rule 15 (statement -> whileloop .)
    FUNCTION        reduce using rule 15 (statement -> whileloop .)
    FOR             reduce using rule 15 (statement -> whileloop .)
    RIGHTBRACE      reduce using rule 15 (statement -> whileloop .)
    $end            reduce using rule 15 (statement -> whileloop .)
    RIGHTPAREN      reduce using rule 15 (statement -> whileloop .)


state 6

    (9) statement -> reassignment . SEMICOLON

    SEMICOLON       shift and go to state 44


state 7

    (110) forloop -> FOR . scope_marker LEFTPAREN initialization SEMICOLON forexpr_marker for_expr forcheck_marker SEMICOLON increment increment_marker RIGHTPAREN forblock endblock_marker
    (111) scope_marker -> .

    LEFTPAREN       reduce using rule 111 (scope_marker -> .)

    scope_marker                   shift and go to state 45

state 8

    (12) statement -> funcstmt . SEMICOLON

    SEMICOLON       shift and go to state 46


state 9

    (88) reassignmentarray -> arrayCall . EQ expression

    EQ              shift and go to state 47


state 10

    (0) S' -> start .



state 11

    (18) statement -> reassignmentarray . SEMICOLON

    SEMICOLON       shift and go to state 48


state 12

    (14) statement -> ifelse .

    BREAK           reduce using rule 14 (statement -> ifelse .)
    CONTINUE        reduce using rule 14 (statement -> ifelse .)
    RETURN          reduce using rule 14 (statement -> ifelse .)
    CONSOLE         reduce using rule 14 (statement -> ifelse .)
    VAR             reduce using rule 14 (statement -> ifelse .)
    ID              reduce using rule 14 (statement -> ifelse .)
    LEFTPAREN       reduce using rule 14 (statement -> ifelse .)
    IF              reduce using rule 14 (statement -> ifelse .)
    WHILE           reduce using rule 14 (statement -> ifelse .)
    FUNCTION        reduce using rule 14 (statement -> ifelse .)
    FOR             reduce using rule 14 (statement -> ifelse .)
    RIGHTBRACE      reduce using rule 14 (statement -> ifelse .)
    $end            reduce using rule 14 (statement -> ifelse .)
    RIGHTPAREN      reduce using rule 14 (statement -> ifelse .)


state 13

    (5) statements -> statement . statements
    (6) statements -> statement .
    (5) statements -> . statement statements
    (6) statements -> . statement
    (7) statement -> . assignment SEMICOLON
    (8) statement -> . declaration SEMICOLON
    (9) statement -> . reassignment SEMICOLON
    (10) statement -> . BREAK SEMICOLON
    (11) statement -> . CONTINUE SEMICOLON
    (12) statement -> . funcstmt SEMICOLON
    (13) statement -> . if
    (14) statement -> . ifelse
    (15) statement -> . whileloop
    (16) statement -> . funcdecl
    (17) statement -> . forloop
    (18) statement -> . reassignmentarray SEMICOLON
    (19) statement -> . RETURN expression SEMICOLON
    (20) statement -> . CONSOLE DOT LOG LEFTPAREN printList RIGHTPAREN SEMICOLON
    (26) assignment -> . VAR assignlist
    (23) declaration -> . VAR declarationList
    (30) reassignment -> . ID EQ expression
    (31) reassignment -> . ID PLUSEQ expression
    (32) reassignment -> . ID MINUSEQ expression
    (33) reassignment -> . ID INTOEQ expression
    (34) reassignment -> . ID DIVEQ expression
    (35) reassignment -> . ID INCR
    (36) reassignment -> . ID DECR
    (37) reassignment -> . ID LSHIFTEQ expression
    (38) reassignment -> . ID RSHIFTEQ expression
    (39) reassignment -> . ID URSHIFTEQ expression
    (40) reassignment -> . ID ANDEQ expression
    (41) reassignment -> . ID OREQ expression
    (42) reassignment -> . ID XOREQ expression
    (43) reassignment -> . ID MODEQ expression
    (44) reassignment -> . LEFTPAREN reassignment RIGHTPAREN
    (84) funcstmt -> . ID EQ functioncall
    (85) funcstmt -> . functioncall
    (86) funcstmt -> . VAR ID EQ functioncall
    (100) if -> . IF expression ifelseblock block ifblockend
    (102) ifelse -> . IF expression ifelseblock block ELSE elseblock block elseblockend
    (106) whileloop -> . WHILE whileblockstart LEFTPAREN expression RIGHTPAREN exprcheck block whileblockend
    (128) funcdecl -> . FUNCTION ID funcscopedefnormal LEFTPAREN funcarghead RIGHTPAREN funblock endfunc
    (131) funcdecl -> . VAR ID EQ FUNCTION funcscopedef LEFTPAREN funcarghead RIGHTPAREN funblock SEMICOLON endfuncdecl
    (110) forloop -> . FOR scope_marker LEFTPAREN initialization SEMICOLON forexpr_marker for_expr forcheck_marker SEMICOLON increment increment_marker RIGHTPAREN forblock endblock_marker
    (88) reassignmentarray -> . arrayCall EQ expression
    (96) functioncall -> . ID LEFTPAREN argList RIGHTPAREN
    (89) arrayCall -> . ID reference

    RIGHTPAREN      reduce using rule 6 (statements -> statement .)
    $end            reduce using rule 6 (statements -> statement .)
    RIGHTBRACE      reduce using rule 6 (statements -> statement .)
    BREAK           shift and go to state 25
    CONTINUE        shift and go to state 26
    RETURN          shift and go to state 3
    CONSOLE         shift and go to state 17
    VAR             shift and go to state 21
    ID              shift and go to state 22
    LEFTPAREN       shift and go to state 19
    IF              shift and go to state 14
    WHILE           shift and go to state 2
    FUNCTION        shift and go to state 15
    FOR             shift and go to state 7

    statements                     shift and go to state 49
    if                             shift and go to state 4
    whileloop                      shift and go to state 5
    funcstmt                       shift and go to state 8
    arrayCall                      shift and go to state 9
    reassignmentarray              shift and go to state 11
    ifelse                         shift and go to state 12
    statement                      shift and go to state 13
    forloop                        shift and go to state 16
    assignment                     shift and go to state 18
    declaration                    shift and go to state 20
    funcdecl                       shift and go to state 24
    reassignment                   shift and go to state 6
    functioncall                   shift and go to state 27

state 14

    (100) if -> IF . expression ifelseblock block ifblockend
    (102) ifelse -> IF . expression ifelseblock block ELSE elseblock block elseblockend
    (52) expression -> . expression PLUS expression
    (53) expression -> . expression MINUS expression
    (54) expression -> . expression INTO expression
    (55) expression -> . expression DIVIDE expression
    (56) expression -> . expression MOD expression
    (57) expression -> . LEFTPAREN expression RIGHTPAREN
    (58) expression -> . NOT expression
    (59) expression -> . expression BINAND expression
    (60) expression -> . expression BINOR expression
    (61) expression -> . expression BINXOR expression
    (62) expression -> . BINNOT expression
    (63) expression -> . expression LT expression
    (64) expression -> . expression GT expression
    (65) expression -> . expression DOUBLEEQ expression
    (66) expression -> . expression NOTEQUAL expression
    (67) expression -> . expression LTE expression
    (68) expression -> . expression GTE expression
    (69) expression -> . expression STREQUAL expression
    (70) expression -> . expression STRNEQUAL expression
    (71) expression -> . expression AND expression
    (72) expression -> . expression OR expression
    (73) expression -> . expression LSHIFT expression
    (74) expression -> . expression RSHIFT expression
    (75) expression -> . expression URSHIFT expression
    (76) expression -> . EVAL LEFTPAREN evalmarker statements evalendmarker RIGHTPAREN
    (77) expression -> . EVAL LEFTPAREN block RIGHTPAREN
    (78) expression -> . EVAL LEFTPAREN expression RIGHTPAREN
    (81) expression -> . basicTypes
    (82) expression -> . ID
    (83) expression -> . TYPEOF expression
    (87) expression -> . arrayCall
    (92) basicTypes -> . NUMBER
    (93) basicTypes -> . BOOLEAN
    (94) basicTypes -> . STRING
    (95) basicTypes -> . UNDEFINED
    (89) arrayCall -> . ID reference

    LEFTPAREN       shift and go to state 37
    NOT             shift and go to state 41
    BINNOT          shift and go to state 43
    EVAL            shift and go to state 31
    ID              shift and go to state 38
    TYPEOF          shift and go to state 36
    NUMBER          shift and go to state 32
    BOOLEAN         shift and go to state 40
    STRING          shift and go to state 35
    UNDEFINED       shift and go to state 33

    arrayCall                      shift and go to state 34
    expression                     shift and go to state 50
    basicTypes                     shift and go to state 42

state 15

    (128) funcdecl -> FUNCTION . ID funcscopedefnormal LEFTPAREN funcarghead RIGHTPAREN funblock endfunc

    ID              shift and go to state 51


state 16

    (17) statement -> forloop .

    BREAK           reduce using rule 17 (statement -> forloop .)
    CONTINUE        reduce using rule 17 (statement -> forloop .)
    RETURN          reduce using rule 17 (statement -> forloop .)
    CONSOLE         reduce using rule 17 (statement -> forloop .)
    VAR             reduce using rule 17 (statement -> forloop .)
    ID              reduce using rule 17 (statement -> forloop .)
    LEFTPAREN       reduce using rule 17 (statement -> forloop .)
    IF              reduce using rule 17 (statement -> forloop .)
    WHILE           reduce using rule 17 (statement -> forloop .)
    FUNCTION        reduce using rule 17 (statement -> forloop .)
    FOR             reduce using rule 17 (statement -> forloop .)
    RIGHTBRACE      reduce using rule 17 (statement -> forloop .)
    $end            reduce using rule 17 (statement -> forloop .)
    RIGHTPAREN      reduce using rule 17 (statement -> forloop .)


state 17

    (20) statement -> CONSOLE . DOT LOG LEFTPAREN printList RIGHTPAREN SEMICOLON

    DOT             shift and go to state 52


state 18

    (7) statement -> assignment . SEMICOLON

    SEMICOLON       shift and go to state 53


state 19

    (44) reassignment -> LEFTPAREN . reassignment RIGHTPAREN
    (30) reassignment -> . ID EQ expression
    (31) reassignment -> . ID PLUSEQ expression
    (32) reassignment -> . ID MINUSEQ expression
    (33) reassignment -> . ID INTOEQ expression
    (34) reassignment -> . ID DIVEQ expression
    (35) reassignment -> . ID INCR
    (36) reassignment -> . ID DECR
    (37) reassignment -> . ID LSHIFTEQ expression
    (38) reassignment -> . ID RSHIFTEQ expression
    (39) reassignment -> . ID URSHIFTEQ expression
    (40) reassignment -> . ID ANDEQ expression
    (41) reassignment -> . ID OREQ expression
    (42) reassignment -> . ID XOREQ expression
    (43) reassignment -> . ID MODEQ expression
    (44) reassignment -> . LEFTPAREN reassignment RIGHTPAREN

    ID              shift and go to state 55
    LEFTPAREN       shift and go to state 19

    reassignment                   shift and go to state 54

state 20

    (8) statement -> declaration . SEMICOLON

    SEMICOLON       shift and go to state 56


state 21

    (26) assignment -> VAR . assignlist
    (23) declaration -> VAR . declarationList
    (86) funcstmt -> VAR . ID EQ functioncall
    (131) funcdecl -> VAR . ID EQ FUNCTION funcscopedef LEFTPAREN funcarghead RIGHTPAREN funblock SEMICOLON endfuncdecl
    (27) assignlist -> . ID EQ expression COMMA assignlist
    (28) assignlist -> . ID EQ expression
    (29) assignlist -> . ID EQ array
    (24) declarationList -> . ID COMMA declarationList
    (25) declarationList -> . ID

    ID              shift and go to state 59

    declarationList                shift and go to state 58
    assignlist                     shift and go to state 57

state 22

    (30) reassignment -> ID . EQ expression
    (31) reassignment -> ID . PLUSEQ expression
    (32) reassignment -> ID . MINUSEQ expression
    (33) reassignment -> ID . INTOEQ expression
    (34) reassignment -> ID . DIVEQ expression
    (35) reassignment -> ID . INCR
    (36) reassignment -> ID . DECR
    (37) reassignment -> ID . LSHIFTEQ expression
    (38) reassignment -> ID . RSHIFTEQ expression
    (39) reassignment -> ID . URSHIFTEQ expression
    (40) reassignment -> ID . ANDEQ expression
    (41) reassignment -> ID . OREQ expression
    (42) reassignment -> ID . XOREQ expression
    (43) reassignment -> ID . MODEQ expression
    (84) funcstmt -> ID . EQ functioncall
    (96) functioncall -> ID . LEFTPAREN argList RIGHTPAREN
    (89) arrayCall -> ID . reference
    (90) reference -> . LEFTBRACKET expression RIGHTBRACKET reference
    (91) reference -> . LEFTBRACKET expression RIGHTBRACKET

    EQ              shift and go to state 74
    PLUSEQ          shift and go to state 76
    MINUSEQ         shift and go to state 67
    INTOEQ          shift and go to state 62
    DIVEQ           shift and go to state 70
    INCR            shift and go to state 64
    DECR            shift and go to state 63
    LSHIFTEQ        shift and go to state 71
    RSHIFTEQ        shift and go to state 75
    URSHIFTEQ       shift and go to state 66
    ANDEQ           shift and go to state 73
    OREQ            shift and go to state 69
    XOREQ           shift and go to state 65
    MODEQ           shift and go to state 61
    LEFTPAREN       shift and go to state 72
    LEFTBRACKET     shift and go to state 68

    reference                      shift and go to state 60

state 23

    (3) block -> LEFTBRACE . blockmarker statements RIGHTBRACE
    (4) blockmarker -> .

    BREAK           reduce using rule 4 (blockmarker -> .)
    CONTINUE        reduce using rule 4 (blockmarker -> .)
    RETURN          reduce using rule 4 (blockmarker -> .)
    CONSOLE         reduce using rule 4 (blockmarker -> .)
    VAR             reduce using rule 4 (blockmarker -> .)
    ID              reduce using rule 4 (blockmarker -> .)
    LEFTPAREN       reduce using rule 4 (blockmarker -> .)
    IF              reduce using rule 4 (blockmarker -> .)
    WHILE           reduce using rule 4 (blockmarker -> .)
    FUNCTION        reduce using rule 4 (blockmarker -> .)
    FOR             reduce using rule 4 (blockmarker -> .)

    blockmarker                    shift and go to state 77

state 24

    (16) statement -> funcdecl .
